--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         /* تعريف الخط */
         @font-face {
             font-family: 'LAXR';
-            src: url('./fonts/LAXR.woff2') format('woff2');
+            src: url('./LAXR.woff2') format('woff2');
             font-display: swap;
         }
     
